[gd_scene load_steps=2 format=3 uid="uid://cetlrkcff3pnl"]

[ext_resource type="Script" uid="uid://dm823cy7021ys" path="res://scripts/ui/hub.gd" id="1_qssp3"]

[node name="HUB" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_qssp3")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "üè† HUB"

[node name="TopStats" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="LabelGold" type="Label" parent="Margin/VBox/TopStats"]
layout_mode = 2

[node name="LabelXP" type="Label" parent="Margin/VBox/TopStats"]
layout_mode = 2

[node name="LabelLevel" type="Label" parent="Margin/VBox/TopStats"]
layout_mode = 2

[node name="Sep1" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="EquipTitle" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "üß© √âquipement"

[node name="ScrollSlots" type="ScrollContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="SlotsList" type="VBoxContainer" parent="Margin/VBox/ScrollSlots"]
layout_mode = 2

[node name="Sep2" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="BottomButtons" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="ButtonShop" type="Button" parent="Margin/VBox/BottomButtons"]
layout_mode = 2
text = "üõí Boutique"

[node name="ButtonRun" type="Button" parent="Margin/VBox/BottomButtons"]
layout_mode = 2
text = "‚ñ∂Ô∏è Run"
